--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -3791,6 +3791,100 @@
     "# Example usage\n",
     "calculate_day_night_sunrise_sunset_percentage(\"timelapse/Time_Lapse.mkv\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "def process_video_with_brightness_and_time(video_path, output_path):\n",
+    "    \"\"\"\n",
+    "    Processes a video to calculate the brightness of each frame and classify it as Day, Night, or Sunrise/Sunset.\n",
+    "    The classification and brightness value are displayed on the top-left corner of the output video.\n",
+    "\n",
+    "    Parameters:\n",
+    "    video_path (str): Path to the input video file.\n",
+    "    output_path (str): Path to save the output video file with annotations.\n",
+    "    \"\"\"\n",
+    "    # Define brightness thresholds\n",
+    "    brightness_day_threshold = 90  # Frames with brightness above this are classified as \"Day\"\n",
+    "    brightness_sunrise_sunset_threshold = 30  # Frames with brightness between this and the day threshold are \"Sunrise/Sunset\"\n",
+    "\n",
+    "    # Open the video file\n",
+    "    video = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "    if not video.isOpened():\n",
+    "        raise ValueError(\"Error: Unable to open video file.\")\n",
+    "\n",
+    "    # Get video properties for creating the output video\n",
+    "    frame_width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))  # Width of the video frames\n",
+    "    frame_height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))  # Height of the video frames\n",
+    "    fps = video.get(cv2.CAP_PROP_FPS)  # Frames per second of the video\n",
+    "\n",
+    "    # Define the codec and create a VideoWriter object for saving the output video\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'XVID')  # Codec for AVI format\n",
+    "    out = cv2.VideoWriter(output_path, fourcc, fps, (frame_width, frame_height))\n",
+    "\n",
+    "    while True:\n",
+    "        # Read a frame from the video\n",
+    "        ret, frame = video.read()\n",
+    "        if not ret:  # If no more frames are available, exit the loop\n",
+    "            break\n",
+    "\n",
+    "        # Convert the frame to grayscale to calculate brightness\n",
+    "        gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "        # Calculate the average brightness of the frame\n",
+    "        avg_brightness = np.mean(gray_frame)\n",
+    "\n",
+    "        # Classify the frame based on brightness\n",
+    "        if avg_brightness > brightness_day_threshold:\n",
+    "            time_of_day = \"Day\"  # Bright frames are classified as \"Day\"\n",
+    "        elif avg_brightness > brightness_sunrise_sunset_threshold:\n",
+    "            time_of_day = \"Sunrise/Sunset\"  # Intermediate brightness frames are \"Sunrise/Sunset\"\n",
+    "        else:\n",
+    "            time_of_day = \"Night\"  # Dark frames are classified as \"Night\"\n",
+    "\n",
+    "        # Create the overlay text to display brightness and classification\n",
+    "        overlay_text = f\"Brightness: {avg_brightness:.2f}, {time_of_day}\"\n",
+    "        font = cv2.FONT_HERSHEY_SIMPLEX  # Font style for the text\n",
+    "        font_scale = 3  # Font size\n",
+    "        font_color = (255, 255, 255)  # White color for the text\n",
+    "        thickness = 2  # Thickness of the text\n",
+    "        position = (15, 75)  # Position for the text (top-left corner)\n",
+    "\n",
+    "        # Add a black rectangle background for better text visibility\n",
+    "        text_size, _ = cv2.getTextSize(overlay_text, font, font_scale, thickness)  # Get text dimensions\n",
+    "        text_width, text_height = text_size\n",
+    "        cv2.rectangle(frame, (position[0] - 5, position[1] - text_height - 5),\n",
+    "                      (position[0] + text_width + 5, position[1] + 5), (0, 0, 0), -1)  # Draw black rectangle\n",
+    "\n",
+    "        # Add the overlay text on top of the rectangle\n",
+    "        cv2.putText(frame, overlay_text, position, font, font_scale, font_color, thickness)\n",
+    "\n",
+    "        # Write the annotated frame to the output video\n",
+    "        out.write(frame)\n",
+    "\n",
+    "    # Release the video objects to free resources\n",
+    "    video.release()\n",
+    "    out.release()\n",
+    "\n",
+    "# Example usage:\n",
+    "# Input video: \"timelapse/Time_Lapse.mkv\"\n",
+    "# Output video: \"output_video.avi\"\n",
+    "process_video_with_brightness_and_time(\"../../timelapse/Time_Lapse.mkv\", \"output_video.avi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
